# me

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md
.claude/skills/superpowers:brainstorming/: SKILL.md
.claude/skills/superpowers:requesting-code-review/: SKILL.md
.claude/skills/superpowers:subagent-driven-development/: SKILL.md
.claude/skills/superpowers:using-git-worktrees/: SKILL.md
.claude/skills/superpowers:writing-plans/: SKILL.md
.github/workflows/: ralph-loops.yml
docs/plans/: 2026-02-23-personal-monorepo-design.md  2026-02-23-personal-monorepo-implementation.md
loops/: _registry.yaml  registry.py
loops/_template/: PROMPT.md.example  loop.sh
loops/github-profile-reverse/: PROMPT.md  reverse-ralph.sh
loops/linkedin-profile-reverse/: PROMPT.md  reverse-ralph.sh
loops/ph-land-title-coordinates-reverse/: PROMPT.md
loops/ph-tax-computations-reverse/: PROMPT.md
loops/reverse-ph-land-title-coordinates/: traverse_computation.py
loops/reverse-ph-realestate-calcs/: PROMPT.md
loops/reverse-ph-tax-computations/: loop.sh
loops/reverse-ph-zonal-value-engine/: PROMPT.md
loops/reverse-pymc-website-spec/: PROMPT.md
loops/reverse-tsvj-backoffice-automation/: PROMPT.md
loops/reverse-tsvj-webapp-spec/: PROMPT.md
projects/: nutsandbolts--cheerful.md  pymc--decision-orchestrator.md
ralph/: pyproject.toml
ralph/ralph/: __init__.py  cli.py  config.py  discover.py  preflight.py  runner.py  settings.py
ralph/tests/: test_cli.py  test_config.py  test_discover.py  test_preflight.py  test_registry.py  test_runner.py  test_settings.py
(+299 files in other folders)
