[project]
name = "ralph"
version = "0.1.0"
description = "Typed loop runner for ralph loop system"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.9.0",
    "pre-commit>=4.0",
    "pytest>=8.0",
]

[project.scripts]
ralph = "ralph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["ralph"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
